Hollidays class constructed need to add way to get year off of date

--- a/step1 /Makefile
+++ b/step1 /Makefile
@@ -1,7 +1,8 @@
 all: proj
-proj: main.o Date.h Date.o
+proj: main.o Date.h Date.o Holidays.o Holidays.h
 	g++ -o main.o -c main.cpp
 	g++ -o Date.o -c Date.cpp
-	g++ -o proj Date.o main.o
+	g++ -o Holidays.o -c Holidays.cpp
+	g++ -o proj Date.o main.o Holidays.o
 clean:
 	rm proj
